--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "format:check": "prettier --check \"src/**/*.{ts,json}\"",
     "prepare": "husky",
     "db:seed:customers": "tsx scripts/seedCustomers.ts",
-    "db:customers": "tsx scripts/listCustomers.ts"
+    "db:customers": "tsx scripts/listCustomers.ts",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --name init",
+    "prisma:studio": "prisma studio"
   },
   "lint-staged": {
     "*.ts": [
@@ -29,19 +32,23 @@
     ]
   },
   "dependencies": {
+    "@prisma/client": "^6.17.0",
     "bcrypt": "^6.0.0",
-    "sqlite3": "^5.1.7",
-    "sqlite": "^5.1.1"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@types/bcrypt": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "^3.2.4",
     "bcryptjs": "^3.0.2",
+    "cross-env": "^10.1.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
@@ -50,6 +57,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
     "prettier": "^3.6.2",
+    "prisma": "^6.17.0",
     "tsx": "^4.19.1",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4"
