test: implementado o primeiro teste de integração para user

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 # Para usar SQLite local, altere manualmente o provider no prisma/schema.prisma
 # e use uma URL do tipo: file:./dev.db
 DATABASE_URL=
+
+
+# Coloque aqui a string de conexão do Supabase
+DATABASE_URL=
