ci: verificando erro em github ACTIONS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,28 +2,14 @@ name: CI
 
 on:
   push:
-    branches: [main, testes]
+    branches: [main, testes, testsIntegration]
   pull_request:
-    branches: [main, testes]
+    branches: [main, testes, testsIntegration]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres:15
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: test_db
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    environment: SUPABASE
 
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -40,12 +26,20 @@ jobs:
       - name: Instalar dependências
         run: yarn install --frozen-lockfile
 
+      - name: Validar DATABASE_URL presente
+        run: |
+          if [ -z "${DATABASE_URL}" ]; then
+            echo "DATABASE_URL está vazio. Verifique se o secret DATABASE_URL está definido no Environment 'SUPABASE' e se o job está associado a esse environment."
+            exit 1
+          fi
+          echo "DATABASE_URL detectado (valor oculto). Prosseguindo..."
+
       - name: Gerar Prisma Client
         run: npx prisma generate
 
       - name: Aplicar migrações
         run: npx prisma migrate deploy
-       
+
       - name: Rodar testes
         run: yarn test
 
